fix wrapping of save and return button on edit page

--- a/templates/contestant/edit.html.twig
+++ b/templates/contestant/edit.html.twig
@@ -13,12 +13,12 @@
         {% if modificationsAllowed %}
             <hr class="my-4">
             <div class="container">
-                <div class="row justify-content-sm-start">
-                    <div class="col-12 col-sm-auto ps-0">
+                <div class="row justify-content-start gap-2">
+                    <div class="col-auto p-0">
                         <input class="btn btn-success btn-block" type="submit"
                                value="{{ 'global.forms.button.save'|trans }}"/>
                     </div>
-                    <div class="col-12 col-sm-auto">
+                    <div class="col-auto p-0">
                         <a class="btn btn-dark btn-block" href="{{ path('welcome') }}">
                             {{ 'global.forms.button.back'|trans }}
                         </a>
@@ -114,12 +114,12 @@
         {% if modificationsAllowed %}
             <hr class="mb-4">
             <div class="container">
-                <div class="row justify-content-sm-start">
-                    <div class="col-12 col-sm-auto ps-0">
+                <div class="row justify-content-start gap-2">
+                    <div class="col-auto p-0">
                         <input class="btn btn-success btn-block" type="submit"
                                value="{{ 'global.forms.button.save'|trans }}"/>
                     </div>
-                    <div class="col-12 col-sm-auto">
+                    <div class="col-auto p-0">
                         <a class="btn btn-dark btn-block" href="{{ path('welcome') }}">
                             {{ 'global.forms.button.back'|trans }}
                         </a>
