paginate contestant overview

--- a/templates/admin/contestants.html.twig
+++ b/templates/admin/contestants.html.twig
@@ -46,6 +46,7 @@
             data-search="true"
             data-search-align="left"
             data-search-accent-neutralise="true"
+            data-pagination="true"
             data-show-columns="true"
             data-buttons-align="left"
             data-buttons-class="primary"
