export all data (disregard pagination)

--- a/templates/admin/contestants.html.twig
+++ b/templates/admin/contestants.html.twig
@@ -53,6 +53,7 @@
             data-filter-control="true"
             data-show-export="true"
             data-export-types="['csv', 'xlsx']"
+            data-export-data-type="all"
         >
             <caption>{{ title|trans }}</caption>
             <thead>
