--- a/templates/admin/contestants.html.twig
+++ b/templates/admin/contestants.html.twig
@@ -82,7 +82,7 @@
                 <th data-field="weight-category" data-sortable="true" data-filter-control="select">
                     {{ 'contestant.data.weight-category'|trans }}
                 </th>
-                <th data-field="created-at" dara-sortable="true">
+                <th data-field="created-at" data-sortable="true">
                     {{ 'contestant.data.created-at'|trans }}
                 </th>
                 <th data-field="comment" data-sortable="true">
