--- a/templates/welcome/waiting.html.twig
+++ b/templates/welcome/waiting.html.twig
@@ -5,15 +5,16 @@
     <meta charset="UTF-8">
     <title>{{ 'welcome.title'|trans }}</title>
     <link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="icon" type="image/x-icon" href="{{ asset('images/logo_black.ico') }}"/>
+    <link rel="icon" type="image/x-icon" href="{{ asset('images/favicon-judoclub-erfurt.png') }}"/>
 </head>
 
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary" aria-label="site navigation">
     <div class="container-fluid">
         <a class="navbar-brand" href="{{ path('welcome') }}">
-            <img src="{{ asset('images/logo_white.svg') }}" width="100" alt="ITP"/>
+            <img src="{{ asset('images/favicon-judoclub-erfurt.png') }}" width="50" alt="EJC"/>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
