--- a/templates/registration/new.html.twig
+++ b/templates/registration/new.html.twig
@@ -12,7 +12,8 @@
         {{ form_row(registrationForm.email, {label: 'registration.data.email'}) }}
         {{ form_row(registrationForm.plainPassword, {label: 'registration.data.password'}) }}
         {{ form_row(registrationForm.club, {label: 'registration.data.club'}) }}
-        {{ form_row(registrationForm.country, {label: 'registration.data.country'}) }}
+        {{ form_row(registrationForm.country, {label: 'registration.data.country', 'attr': {'onChange': 'checkState(this)'}}) }}
+        {{ form_row(registrationForm.state, {label: 'registration.data.state'}) }}
         {{ form_row(registrationForm.firstName, {label: 'registration.data.first-name'}) }}
         {{ form_row(registrationForm.lastName, {label: 'registration.data.last-name'}) }}
         {{ form_row(registrationForm.telephone, {label: 'registration.data.telephone'}) }}
@@ -20,4 +21,20 @@
         <button class="btn btn-primary btn-lg" type="submit">{{ 'registration.new.action'|trans }}</button>
         {{ form_end(registrationForm, {'render_rest': false}) }}
     </div>
+{% endblock %}
+
+{% block javascript %}
+    <script>
+        function checkState(element) {
+            let country = $(`select#${element.id}`).val()
+            let state = $('select#registration_form_state')
+
+            if (country === 'DE') {
+                state.parent().show()
+            } else {
+                state.val('').trigger('change')
+                state.parent().hide()
+            }
+        }
+    </script>
 {% endblock %}
