fix missing export of state for male participants

--- a/templates/admin/contestants.html.twig
+++ b/templates/admin/contestants.html.twig
@@ -115,7 +115,7 @@
                     <td>{{ maleContestant.lastName }}</td>
                     <td>{{ maleContestant.registration.club }}</td>
                     <td>{{ maleContestant.registration.country }}</td>
-                    <td>{{ femaleContestant.registration.state }}</td>
+                    <td>{{ maleContestant.registration.state }}</td>
                     <td>{{ "contestant.data.gender.male"|trans }}</td>
                     <td data-tableexport-xlsxformatid="1">{{ maleContestant.year }}</td>
                     <td>{{ "contestant.data.age-category.#{ ageCategory }"|trans }}</td>
