--- a/templates/invoice/pdf.html.twig
+++ b/templates/invoice/pdf.html.twig
@@ -40,7 +40,7 @@
         <td colspan="4"></td>
     </tr>
     <tr>
-        <td style="width: 45%"><u><b>Rechnung</b></u></td>
+        <td style="width: 45%"><u><b>Zu zahlendes Startgeld</b></u></td>
         <td style="width: 15%"></td>
         <td style="border: 1px solid black; width: 24%">Rechnungsnummer:</td>
         <td style="border: 1px solid black; width: 16%; text-align: center; ">
