further avoid using the word "Rechungsnummer" on invoice

--- a/templates/invoice/pdf.html.twig
+++ b/templates/invoice/pdf.html.twig
@@ -42,7 +42,7 @@
     <tr>
         <td style="width: 45%"><u><b>Zu zahlendes Startgeld</b></u></td>
         <td style="width: 15%"></td>
-        <td style="border: 1px solid black; width: 24%">Rechnungsnummer:</td>
+        <td style="border: 1px solid black; width: 24%">Registrierungsnummer:</td>
         <td style="border: 1px solid black; width: 16%; text-align: center; ">
             <b>{{ "%03d"|format(registration.id) }}</b>
         </td>
@@ -118,9 +118,9 @@
             Sparkasse Mittelthüringen<br>
             IBAN: DE90 8205 1000 0130 0993 76<br>
             Swift code (BIC): HELADEF1WEM<br>
-            <b>Bitte Rechnungsnummer angeben!</b><br>
+            <b>Bitte Registrierungsnummer angeben!</b><br>
             <br>
-            Preis ist ohne Überweisungsgebühren!!!
+            Preis ist ohne Überweisungsgebühren!
         </td>
     </tr>
 </table>
