fix addition of competitors when limit is reached

--- a/templates/contestant/edit.html.twig
+++ b/templates/contestant/edit.html.twig
@@ -4,6 +4,7 @@
 
 {% block body %}
     {% set modificationsAllowed = is_granted('IS_IMPERSONATOR') or date(endDate, 'Europe/Paris') > date('now', 'Europe/Paris') %}
+    {% set additionsAllowed = (cup == 'ega' and limit_service.egaPokal > 0) or (limit_service.messeCup > 0) %}
     {{ form_start(form, {'attr': {'id': 'contestants_form'}}) }}
     {{ form_row(form._token) }}
     <div class="p-2 p-md-3 bg-light rounded-3">
@@ -99,7 +100,7 @@
                     </div>
                 </div>
             {% endfor %}
-            {% if modificationsAllowed %}
+            {% if modificationsAllowed and additionsAllowed %}
                 <div class="col mb-4" id="add-new-contestant">
                     <div class="card h-100 text-center align-items-center">
                         <div class="card-body d-flex align-items-center">
@@ -175,6 +176,7 @@
                             </label>
                             <span style="display: none" id="move-contestant-id"></span>
                             <select class="form-control" id="move-select">
+                                {%  if limit_service.messeCup > 0 %}
                                 <option
                                     value="{{ path('contestants_move', {id: "_id_", fromCup: "#{ cup }", fromGender: "#{ gender }", toCup: "messe", toGender: "female"}) }}">
                                     {{ 'base.menu.contestant.messe'|trans }} {{ 'contestant.data.gender.female'|trans }}
@@ -183,6 +185,8 @@
                                     value="{{ path('contestants_move', {id: "_id_", fromCup: "#{ cup }", fromGender: "#{ gender }", toCup: "messe", toGender: "male"}) }}">
                                     {{ 'base.menu.contestant.messe'|trans }} {{ 'contestant.data.gender.male'|trans }}
                                 </option>
+                                {% endif %}
+                                {%  if limit_service.egaPokal > 0 %}
                                 <option
                                     value="{{ path('contestants_move', {id: "_id_", fromCup: "#{ cup }", fromGender: "#{ gender }", toCup: "ega", toGender: "female"}) }}">
                                     {{ 'base.menu.contestant.ega'|trans }} {{ 'contestant.data.gender.female'|trans }}
@@ -191,6 +195,7 @@
                                     value="{{ path('contestants_move', {id: "_id_", fromCup: "#{ cup }", fromGender: "#{ gender }", toCup: "ega", toGender: "male"}) }}">
                                     {{ 'base.menu.contestant.ega'|trans }} {{ 'contestant.data.gender.male'|trans }}
                                 </option>
+                                {% endif %}
                             </select>
                         </div>
                     </form>
