allow always additions if admin

--- a/templates/contestant/edit.html.twig
+++ b/templates/contestant/edit.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     {% set modificationsAllowed = is_granted('IS_IMPERSONATOR') or date(endDate, 'Europe/Paris') > date('now', 'Europe/Paris') %}
-    {% set additionsAllowed = (cup == 'ega' and limit_service.egaPokal > 0) or (limit_service.messeCup > 0) %}
+    {% set additionsAllowed = is_granted('IS_IMPERSONATOR') or (cup == 'ega' and limit_service.egaPokal > 0) or (limit_service.messeCup > 0) %}
     {{ form_start(form, {'attr': {'id': 'contestants_form'}}) }}
     {{ form_row(form._token) }}
     <div class="p-2 p-md-3 bg-light rounded-3">
@@ -176,7 +176,7 @@
                             </label>
                             <span style="display: none" id="move-contestant-id"></span>
                             <select class="form-control" id="move-select">
-                                {%  if limit_service.messeCup > 0 %}
+                                {%  if is_granted('IS_IMPERSONATOR') or limit_service.messeCup > 0 %}
                                 <option
                                     value="{{ path('contestants_move', {id: "_id_", fromCup: "#{ cup }", fromGender: "#{ gender }", toCup: "messe", toGender: "female"}) }}">
                                     {{ 'base.menu.contestant.messe'|trans }} {{ 'contestant.data.gender.female'|trans }}
@@ -186,7 +186,7 @@
                                     {{ 'base.menu.contestant.messe'|trans }} {{ 'contestant.data.gender.male'|trans }}
                                 </option>
                                 {% endif %}
-                                {%  if limit_service.egaPokal > 0 %}
+                                {%  if is_granted('IS_IMPERSONATOR') or limit_service.egaPokal > 0 %}
                                 <option
                                     value="{{ path('contestants_move', {id: "_id_", fromCup: "#{ cup }", fromGender: "#{ gender }", toCup: "ega", toGender: "female"}) }}">
                                     {{ 'base.menu.contestant.ega'|trans }} {{ 'contestant.data.gender.female'|trans }}
